Support chmod properly on Java 5.
Closes #44.